--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="cursor">|</span>
 
       </h1>
-      <a href="Resume.pdf" download class="btn-download" aria-label="Download Portfolio">Download Portfolio</a>
+      <a href="Resume.pdf" download class="btn-download" aria-label="Download Portfolio">Download Resumé </a>
     </div>
   </header>
 
