--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cyril-Elvis | Portfolio</title>
+  <meta name="description" content="Cyril-Elvis | Web Developer, Blockchain Dev & Cybersecurity Enthusiast Portfolio" />
+<meta name="author" content="Cyril-Elvis">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="https://img.icons8.com/emoji/48/alien-monster.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
