--- a/index.html
+++ b/index.html
@@ -1,83 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="description" content="Cyril-Elvis | Web Developer, Blockchain Dev & Cybersecurity Enthusiast Portfolio" />
-<meta name="author" content="Cyril-Elvis">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="https://img.icons8.com/emoji/48/alien-monster.png">
+  <meta name="author" content="Cyril-Elvis">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://img.icons8.com/emoji/48/alien-monster.png">
   <link rel="stylesheet" href="style.css">
+  <title>Cyril-Elvis | Developer Portfolio</title>
 </head>
 <body>
-
   <div class="loader">👽 Welcome to my world 👾</div>
-
   <main id="main-content" class="hidden">
-
     <section class="intro">
-  <div class="emoji">👽</div>
-  <h1 id="typewriter"></h1>
+      <div class="emoji">👽</div>
+      <h1 id="typewriter"></h1>
+    </section><section class="about">
+  <h2><strong>About me</strong></h2>
+  <p>I'm Cyril-Elvis — a Web Developer, Blockchain Dev (based on Sui), Network Geek, Cybersecurity Enthusiast,
+  AI/ML lover and a Hooper 🏀. I love building in tech.
+  <br>Talk to me, then... You get my resumé!</p>
 </section>
-    <section class="about">
-      <h2><strong>About me</strong></h2>
-      <p>I'm Cyril-Elvis — a Web Developer, Blockchain Dev (based on Sui), Network Geek, Cybersecurity Enthusiast,
-      AI/ML lover and a Hooper 🏀. I love building in tech.
-    <p>  Talk to me, then... You get my resumé!</p>
-    </p>
-    </section>
 
-    <section class="projects">
-      <h2><strong>Projects</strong></h2>
-      <div class="project-list">
-        <div class="project">
-          <h3>Fios Dictionary</h3>
-          <p>A fast, sleek dictionary web app.</p>
-          <div class="tools">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
-          </div>
-          <a href="https://fios-io.netlify.app/" target="_blank">Live</a>
-        </div>
-      <div class="project-list">
-        <div class="project">
-          <h3>Wanderium</h3>
-          <p>Your very own travel recommendation website.</p>
-          <div class="tools">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
-          </div>
-          <a href="https://wanderium.netlify.app/" target="_blank">Live</a>
-        </div>
-      <div class="project-list">
-        <div class="project">
-          <h3>Moviebot AI</h3>
-          <p>API sourced movie recommendation app with real time suggestions.</p>
-          <div class="tools">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
-          </div>
-          <a href="https://moviebot-ai.netlify.app/" target="_blank">Live</a>
-        </div>
-
-        <!-- Add more projects here -->
+<section class="projects">
+  <h2><strong>Projects</strong></h2>
+  <div class="project-list">
+    <div class="project">
+      <h3>Fios Dictionary</h3>
+      <p>A fast, sleek dictionary web app.</p>
+      <div class="tools">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
       </div>
-    </section>
+      <a href="https://fios-io.netlify.app/" target="_blank">Live</a>
+    </div>
 
-    <section class="hobbies">
-      <h2><strong>Hobbies</strong></h2>
-      <ul>
-        <li>Basketball 🏀</li>
-        <li>Tech exploration</li>
-        <li>Reading cybersec blogs</li>
-        <li>Decoding blockchain tech</li>
-  <li> A little bit of rap.... Dave is GOATed </li>
-      </ul>
-    </section>
-    <section class="skills">
+    <div class="project">
+      <h3>Wanderium</h3>
+      <p>Your very own travel recommendation website.</p>
+      <div class="tools">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
+      </div>
+      <a href="https://wanderium.netlify.app/" target="_blank">Live</a>
+    </div>
+
+    <div class="project">
+      <h3>Moviebot AI</h3>
+      <p>API sourced movie recommendation app with real time suggestions.</p>
+      <div class="tools">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
+      </div>
+      <a href="https://moviebot-ai.netlify.app/" target="_blank">Live</a>
+    </div>
+  </div>
+</section>
+
+<section class="hobbies">
+  <h2><strong>Hobbies</strong></h2>
+  <ul>
+    <li>Basketball 🏀</li>
+    <li>Tech exploration</li>
+    <li>Reading cybersec blogs</li>
+    <li>Decoding blockchain tech</li>
+    <li>A little bit of rap... Dave is GOATed</li>
+  </ul>
+</section>
+
+<section class="skills">
   <h2>Tools & Skills</h2>
-
   <div class="skill-category">
     <h3>In the Bag 😎</h3>
     <div class="skill-grid">
@@ -85,7 +79,6 @@
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" title="CSS">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" title="JavaScript">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" title="Python">
-      
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" title="React">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" title="Node.js">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git">
@@ -94,9 +87,8 @@
   </div>
 
   <div class="skill-category">
-    <h3>In the Bag... ish 🤔- Getting there</h3>
+    <h3>In the Bag... ish 🤔</h3>
     <div class="skill-grid">
-      
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/solidity/solidity-original.svg" alt="Solidity" title="Solidity">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" alt="Rust" title="Rust">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" alt="Bash" title="Bash">
@@ -107,20 +99,13 @@
     </div>
   </div>
 </section>
+
 <section class="dev-setup">
   <h2>Dev Setup</h2>
   <pre>
-OS            : Ubuntu 22.04 / Windows WSL
-Editor        : VS Code (Insiders)
-Terminal      : Zsh (with Oh My Zsh)
-Theme         : Dracula / SynthWave '84
-Languages     : JavaScript, Python, Move, 
-Shell Tools   : Git, Curl, Tmux, Bash
-Browser       : Brave / Firefox Developer Edition
-Stack         : React, Node.js, Tailwind 
-Special Sauce : 🧠 ChatGPT, Postman,       Wireshark
-  </pre>
-</section>
+
+OS            : Ubuntu 22.04 / Windows WSL Editor        : VS Code (Insiders) Terminal      : Zsh (with Oh My Zsh) Theme         : Dracula / SynthWave '84 Languages     : JavaScript, Python, Move, Shell Tools   : Git, Curl, Tmux, Bash Browser       : Brave / Firefox Developer Edition Stack         : React, Node.js, Tailwind Special Sauce : 🧠 ChatGPT, Postman,       Wireshark </pre> </section>
+
 <section class="startup">
   <h2>My Startup — Di-vidend</h2>
   <p class="bio">
@@ -145,7 +130,7 @@ Special Sauce : 🧠 ChatGPT, Postman,       Wireshark
   <div class="tool-icons">
     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/svelte/svelte-original.svg" alt="Svelte" title="Svelte">
     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript" title="TypeScript">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" alt="Rust" title="Rust (Move contracts)">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" alt="Rust (Move contracts)" title="Rust">
     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" title="Docker">
     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git">
   </div>
@@ -153,25 +138,16 @@ Special Sauce : 🧠 ChatGPT, Postman,       Wireshark
   <p class="chain">
     <strong>Blockchain:</strong> Sui — for speed, scalability, and composability.
   </p>
+
   <div class="progress-circle">
-  <svg viewBox="0 0 36 36">
-    <path
-      class="circle-bg"
-      d="M18 2.0845
-         a 15.9155 15.9155 0 0 1 0 31.831
-         a 15.9155 15.9155 0 0 1 0 -31.831"
-    />
-    <path
-      class="circle"
-      stroke-dasharray="70, 100"
-      d="M18 2.0845
-         a 15.9155 15.9155 0 0 1 0 31.831
-         a 15.9155 15.9155 0 0 1 0 -31.831"
-    />
-    <text x="18" y="20.35" class="percentage">45%</text>
-  </svg>
-</div>
+    <svg viewBox="0 0 36 36">
+      <path class="circle-bg" d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
+      <path class="circle" stroke-dasharray="45, 100" d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
+      <text x="18" y="20.35" class="percentage">45%</text>
+    </svg>
+  </div>
 </section>
+
 <footer>
   <p>Follow up?</p>
   <div class="socials">
@@ -188,13 +164,10 @@ Special Sauce : 🧠 ChatGPT, Postman,       Wireshark
       <img src="https://img.icons8.com/ios-filled/50/ffffff/secured-letter.png" alt="Email" />
     </a>
   </div>
-  <a href="https://x.com/messages/compose?recipient_id=yourhandle" target="_blank" class="hire-btn">Hire Me</a>
+  <a href="https://x.com/messages/compose?recipient_id=liryc_2" target="_blank" class="hire-btn">Hire Me</a>
 </footer>
 
-  </main>
-
+  </main>  <div id="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">&#8679;</div>
   <script src="script.js"></script>
-  <!-- Back to Top Button -->
-<div id="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">&#8679;</div>
 </body>
-              </html>
+</html>
